syntax = "proto3";

option csharp_namespace = "Altkom.Shopper.Tracking.Api";

package tracking;

service TrackingService {
	rpc AddLocation (AddLocationRequest) returns (AddLocationResponse);
	rpc SubscribeLocation (SubscribeLocationRequest) returns (stream SubscribeLocationResponse);
}

message AddLocationRequest {
	float latitude = 1;
	float longitude = 2;
	int32 vehicle_id = 3;	
}

message AddLocationResponse {
	bool is_confirmed = 1;
}

message SubscribeLocationRequest {
	int32 vehicle_id = 1;
}

message SubscribeLocationResponse {
	float latitude = 1;
	float longitude = 2;
}

